--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest-serializer-vue": "^0.3.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "moment": "^2.22.2",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
